{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 234,
  "lineage": "2b16086d-ed7f-b361-f700-20e72f1abd9b",
  "resources": [
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307307175980:network-acl/acl-08d7f06ad8e41344c",
            "default_network_acl_id": "acl-08d7f06ad8e41344c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 20,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 20
              }
            ],
            "id": "acl-08d7f06ad8e41344c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "307307175980",
            "subnet_ids": [
              "subnet-01d514db99fbc4d57",
              "subnet-093a291a6136a1980",
              "subnet-0c1b7c16c34254721",
              "subnet-0f03129bf999ecb97"
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0d08f42dec44f7450"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307307175980:security-group/sg-0c89d16c6269b39f3",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "for example",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0c89d16c6269b39f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "for example",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "owner_id": "307307175980",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0d08f42dec44f7450"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "egress_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-04e421d3d8182da8c",
            "vpc_id": "vpc-0d08f42dec44f7450"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0390a2f656bc34b97",
            "domain": "vpc",
            "id": "eipalloc-0390a2f656bc34b97",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-63-34-112-252.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.34.112.252",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a24e4add14535fc",
            "domain": "vpc",
            "id": "eipalloc-07a24e4add14535fc",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-212-45-166.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.212.45.166",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307307175980:internet-gateway/igw-0afd567650addc0ba",
            "id": "igw-0afd567650addc0ba",
            "owner_id": "307307175980",
            "vpc_id": "vpc-0d08f42dec44f7450"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0390a2f656bc34b97",
            "connectivity_type": "public",
            "id": "nat-0c719ad5b7008713d",
            "network_interface_id": "eni-0d4fb4ba6acc05682",
            "private_ip": "10.1.3.217",
            "public_ip": "63.34.112.252",
            "subnet_id": "subnet-0c1b7c16c34254721"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.eip_for_nat",
            "module.aws_vpc.aws_internet_gateway.main_internet_gateway",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a24e4add14535fc",
            "connectivity_type": "public",
            "id": "nat-048000e6aaa83e8b7",
            "network_interface_id": "eni-021daf1588145145a",
            "private_ip": "10.1.4.253",
            "public_ip": "52.212.45.166",
            "subnet_id": "subnet-093a291a6136a1980"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.eip_for_nat",
            "module.aws_vpc.aws_internet_gateway.main_internet_gateway",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "ipv6_private_route_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-04e421d3d8182da8c",
            "gateway_id": "",
            "id": "r-rtb-061cdfbd923da33a92750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-061cdfbd923da33a9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_egress_only_internet_gateway.egress_ig",
            "module.aws_vpc.aws_route_table.private_route_table",
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-04e421d3d8182da8c",
            "gateway_id": "",
            "id": "r-rtb-02a5987f69d3312192750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02a5987f69d331219",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_egress_only_internet_gateway.egress_ig",
            "module.aws_vpc.aws_route_table.private_route_table",
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-061cdfbd923da33a91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c719ad5b7008713d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-061cdfbd923da33a9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_eip.eip_for_nat",
            "module.aws_vpc.aws_internet_gateway.main_internet_gateway",
            "module.aws_vpc.aws_nat_gateway.private_nat",
            "module.aws_vpc.aws_route_table.private_route_table",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02a5987f69d3312191080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-048000e6aaa83e8b7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02a5987f69d331219",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_eip.eip_for_nat",
            "module.aws_vpc.aws_internet_gateway.main_internet_gateway",
            "module.aws_vpc.aws_nat_gateway.private_nat",
            "module.aws_vpc.aws_route_table.private_route_table",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_route_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0afd567650addc0ba",
            "id": "r-rtb-009647db369bbbba22750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-009647db369bbbba2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.main_internet_gateway",
            "module.aws_vpc.aws_route_table.public_route_table",
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0afd567650addc0ba",
            "id": "r-rtb-009647db369bbbba21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-009647db369bbbba2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.main_internet_gateway",
            "module.aws_vpc.aws_route_table.public_route_table",
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307307175980:route-table/rtb-061cdfbd923da33a9",
            "id": "rtb-061cdfbd923da33a9",
            "owner_id": "307307175980",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d08f42dec44f7450"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307307175980:route-table/rtb-02a5987f69d331219",
            "id": "rtb-02a5987f69d331219",
            "owner_id": "307307175980",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d08f42dec44f7450"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307307175980:route-table/rtb-009647db369bbbba2",
            "id": "rtb-009647db369bbbba2",
            "owner_id": "307307175980",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d08f42dec44f7450"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba71484e03545487",
            "route_table_id": "rtb-061cdfbd923da33a9",
            "subnet_id": "subnet-0c1b7c16c34254721"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.private_route_table",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b53410fb31a8efe5",
            "route_table_id": "rtb-02a5987f69d331219",
            "subnet_id": "subnet-093a291a6136a1980"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.private_route_table",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aff104cb9f99dc91",
            "route_table_id": "rtb-009647db369bbbba2",
            "subnet_id": "subnet-01d514db99fbc4d57"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.public_route_table",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afecc6c1268ce239",
            "route_table_id": "rtb-009647db369bbbba2",
            "subnet_id": "subnet-0f03129bf999ecb97"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.public_route_table",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307307175980:security-group/sg-0192f57d2e562275b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0192f57d2e562275b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20220716091516878800000001",
            "name_prefix": "terraform-",
            "owner_id": "307307175980",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d08f42dec44f7450"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307307175980:subnet/subnet-0c1b7c16c34254721",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1b7c16c34254721",
            "ipv6_cidr_block": "2a05:d018:18ed:7902::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0be486e25aba9c4a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "307307175980",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private server"
            },
            "tags_all": {
              "Name": "private server"
            },
            "vpc_id": "vpc-0d08f42dec44f7450"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307307175980:subnet/subnet-093a291a6136a1980",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093a291a6136a1980",
            "ipv6_cidr_block": "2a05:d018:18ed:7903::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0125e7c858cf916e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "307307175980",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private server"
            },
            "tags_all": {
              "Name": "private server"
            },
            "vpc_id": "vpc-0d08f42dec44f7450"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307307175980:subnet/subnet-01d514db99fbc4d57",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d514db99fbc4d57",
            "ipv6_cidr_block": "2a05:d018:18ed:7900::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0705421a359fb52ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307307175980",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public server"
            },
            "tags_all": {
              "Name": "Public server"
            },
            "vpc_id": "vpc-0d08f42dec44f7450"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307307175980:subnet/subnet-0f03129bf999ecb97",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f03129bf999ecb97",
            "ipv6_cidr_block": "2a05:d018:18ed:7901::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-06e32eef090c2d5cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307307175980",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public server"
            },
            "tags_all": {
              "Name": "Public server"
            },
            "vpc_id": "vpc-0d08f42dec44f7450"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307307175980:vpc/vpc-0d08f42dec44f7450",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08d7f06ad8e41344c",
            "default_route_table_id": "rtb-0780840e6b6de3753",
            "default_security_group_id": "sg-0c89d16c6269b39f3",
            "dhcp_options_id": "dopt-034d75425e9630aea",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d08f42dec44f7450",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0d959d756c9a79a45",
            "ipv6_cidr_block": "2a05:d018:18ed:7900::/56",
            "ipv6_cidr_block_network_border_group": "eu-west-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0780840e6b6de3753",
            "owner_id": "307307175980"
          }
        }
      ]
    }
  ]
}